# fiber-studio

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  publish.yml  release.yml
app/: .gitignore  README.md  index.html  package.json
app/scripts/: fetch-fnn.ts  version-bump.ts
app/shared/: relays.json
app/src/: index.css  main.tsx  routeTree.gen.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs  state.rs
app/src/lib/: appPreferences.ts  autostart.ts  ckb-key.ts  data-directory.ts  nav.ts  (+2 more)
scripts/: fetch-fnn.ts
shared/: relays.json
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/fnn-config/: testnet.yml
src-tauri/src/: lib.rs
src-tauri/src/commands/: channels.rs  dashboard.rs  mod.rs  network.rs  node.rs  settings.rs  setup.rs  wallet.rs
src-tauri/src/fnn/: bootnodes.rs  channel.rs  ckb_address.rs  config.rs  invoice_display.rs  invoices.rs  keychain.rs  log_store.rs  logs.rs  manager.rs  mod.rs  payment_display.rs  peer_connect.rs  provision.rs  relays.rs  rpc.rs  sent_payments.rs  spawn.rs  studio.rs
src/lib/: data-directory.ts  nav.ts  public-relays.ts
src/routes/: _app.tsx  index.tsx
website/: README.md  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/component/: site-shell.tsx  theme-switcher.tsx
website/lib/: motion.ts  releases.ts
(+267 files in other folders)
